[package]
name = "ServiceHash"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-form-data = "0.6.2"

futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"

warp = "0.3.7"
bytes = "1.6.0"

log = "0.4.21"
env_logger = "0.11.3"

openssl-sys = "0.9"
openssl = "0.10"

hex = "0.4.3"

openapi = "0.1.5"
utoipa = { version = "4.2.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }

serde = { version = "1.0", features = ["derive"] }
